--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -32,24 +32,39 @@ googleAnalytics = ""
   email = "you@yoursite.com"
 
   # Nav links in the side bar
-  [[params.navlinks]]
-  name = "Home"
-  url = ""
+  [[menu.main]]
+    url = "/"
+    name = "Inicio"
+    weight = 1
+    title = "Inicio"
 
   [[params.navlinks]]
-  name = "About"
-  url = "about/"
+      url = "/quienes-somos/"
+      name = "Quienes Somos"
+      weight = 2
 
   [[params.navlinks]]
-  name = "Get in touch"
-  url = "contact/"
+      url = "/servicios/"
+      name = "Servicios"
+      weight = 3
+
+  [[params.navlinks]]
+      url = "/contacto/"
+      name = "Contáctanos"
+      weight = 4
+
+  [[params.navlinks]]
+      url = "/ubicacion/"
+      name = "Ubicación"
+      weight = 5
+
 
   [params.social]
   facebook      = "full page or profile url in facebook"
-  googleplus    = "full profile url in googleplus"
+  #googleplus    = "full profile url in googleplus"
   email         = "email@example.com"
   twitter       = "full profile url in twitter"
   linkedin      = "full profile url in linkedin"
-  stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  #stackoverflow = "full profile url in stackoverflow"
+  #instagram     = "full profile url in instagram"
+  #github        = "full profile url in github"
